--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я англійською" class="form-control" disabled
-                         value="{{user?.lastName}} {{user?.firstName}} {{user?.middleName}}"/>
+                         value="{{user?.lastName}} {{user?.firstName}}"/>
                 </div>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я російською" class="form-control" disabled
@@ -58,7 +58,7 @@
                            [attr.value]="user?.academicTitle"/>
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row" *ngIf="user?.birthDate">
                   <label class="col-sm-3 col-form-label" for="birth">Дата народження</label>
                   <div class="col-sm-9">
                     <input class="form-control"
