--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -16,6 +16,16 @@
       <!--</div>-->
     <!--</div>-->
     <div class="row">
+      <div class="col-lg-2">
+        <form>
+          <div class="form-group">
+            <label for="bibtexFileUpload">Upload Bibtex file</label>
+            <input type="file" (change)="uploadBibtex($event)" class="form-control-file" id="bibtexFileUpload" accept=".pdf,.doc,.docx">
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-lg-12">
         <ng2-smart-table [settings]="settings" [source]="source" (create)="create($event)" (edit)="edit($event)" (delete)="delete($event)"></ng2-smart-table>
       </div>
