Small changes on bibtex api call

--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -20,7 +20,7 @@
         <form>
           <div class="form-group">
             <label for="bibtexFileUpload">Upload Bibtex file</label>
-            <input type="file" (change)="uploadBibtex($event)" class="form-control-file" id="bibtexFileUpload" accept=".pdf,.doc,.docx">
+            <input type="file" (change)="uploadBibtex($event)" class="form-control-file" id="bibtexFileUpload" accept=".bib">
           </div>
         </form>
       </div>
