--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -16,15 +16,11 @@
       <!--</div>-->
     <!--</div>-->
     <div class="row">
-      <div class="col-lg-2">
-        <form>
-          <div class="form-group">
-            <label for="bibtexFileUpload">Upload Bibtex file</label>
-            <input type="file" (change)="uploadBibtex($event)" class="form-control-file" id="bibtexFileUpload" accept=".bib">
-          </div>
-        </form>
+      <div class="col-lg-2 offset-lg-10">
+        <input type="button" class="btn btn-success" (click)="callBibtexModal()" value="Добавити Bibtex файл"/>
       </div>
     </div>
+    <br>
     <div class="row">
       <div class="col-lg-12">
         <ng2-smart-table [settings]="settings" [source]="source" (create)="create($event)" (edit)="edit($event)" (delete)="delete($event)"></ng2-smart-table>
@@ -423,3 +419,35 @@
     </div>
   </div>
 </div>
+
+<!--Bibtex modal-->
+<div bsModal #bibtexModal="bs-modal" class="modal fade modal-table" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Добавити публікації через Bibtex</h4>
+        <button type="button" class="close pull-right" (click)="bibtexModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-lg-12">
+            <form>
+              <div class="form-group">
+                <label for="bibtexFileUpload">Upload Bibtex file</label>
+                <input type="file" (change)="uploadBibtex($event)" class="form-control-file" id="bibtexFileUpload" accept=".bib">
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <ng2-smart-table [settings]="bibtexSettings" [source]="bibtexSource"></ng2-smart-table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
