--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -16,7 +16,7 @@
       <!--</div>-->
     <!--</div>-->
     <div class="row">
-      <div class="col-lg-2 offset-lg-10">
+      <div class="col-lg-12">
         <input type="button" class="btn btn-success" (click)="callBibtexModal()" value="Добавити Bibtex файл"/>
       </div>
     </div>
@@ -432,13 +432,21 @@
       </div>
       <div class="modal-body">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-1">
             <form>
-              <div class="form-group">
-                <label for="bibtexFileUpload">Upload Bibtex file</label>
+              <div class="form-group file-upload">
+                <label for="bibtexFileUpload" class="btn btn-success"><i class="nb-plus"></i></label>
                 <input type="file" (change)="uploadBibtex($event)" class="form-control-file" id="bibtexFileUpload" accept=".bib">
               </div>
             </form>
+          </div>
+          <div class="col-lg-10">
+            <div class="justify-content-center align-self-center">
+              <h5>Завантажений файл: <strong>{{fileName}}</strong></h5>
+            </div>
+          </div>
+          <div class="col-lg-1">
+            <button (click)="saveBibtexUnits()" class="btn btn-success"><i class="nb-checkmark"></i></button>
           </div>
         </div>
         <div class="row">
