--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -450,6 +450,13 @@
           </div>
         </div>
         <div class="row">
+          <ng-select type = "text" id = "bibtexUser"
+                     [options]="options"
+                     [multiple]="true"
+                     [(ngModel)]="bibtexUsers">
+          </ng-select>
+        </div>
+        <div class="row">
           <div class="col-lg-12">
             <ng2-smart-table [settings]="bibtexSettings" [source]="bibtexSource"></ng2-smart-table>
           </div>
