--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,14 @@
 <div class="row">
   <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
-    <s2m-rating></s2m-rating>
+    <s2m-rating [users]="users">
+    </s2m-rating>
   </div>
   <div class="col-xxxl-9 col-xxl-8 col-lg-5 col-md-6">
     <nb-card>
       <nb-card-header>Графік рейтингу</nb-card-header>
       <nb-card-body>
-        <s2m-rating-chart></s2m-rating-chart>
+        <s2m-rating-chart [users]="users">
+        </s2m-rating-chart>
       </nb-card-body>
     </nb-card>
   </div>
